--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <meta name="viewport" content="width=device-width">
     
     <title>Artoo Campus</title>
-  </head>
-  <body>
     
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  </head>
+  <body ng-app="artoo">
+    <!-- operazioni numeriche -->
+    <!-- operazioni sulle stringhe -->
+    <div ng-init="user = {name: 'John Doe', age: 27}">
+      <!-- interpolazioni -->
+    </div>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
