--- a/client/index.html
+++ b/client/index.html
@@ -41,12 +41,14 @@
     <!--internal libs framework -->
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="animate.css">
+
     <link rel="stylesheet" href="index.css">
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
     <script src="/app/app.js"></script>
     <script src="/app/app.routes.js"></script>
     <script src="/app/aboutme/aboutme.controller.js"></script>
+     <script src="/app/contacts/contacts.controller.js"></script>
     <script src="/app/aboutme/aboutme.directive.js"></script>
+    <script src="general.service.js"></script>
   </body>
 </html> 
