fullstackRunsgit add -A..toastInProgress

--- a/client/app/UI/navbar/navbar.template.html
+++ b/client/app/UI/navbar/navbar.template.html
@@ -2,7 +2,7 @@
   <div class="menu" layout="row" layout-align="center">
   
     <md-button ui-sref="aboutme">About Me</md-button>
-    <md-button ui-sref="skills">Portfolio</md-button>
+<!--    <md-button ui-sref="skills">Portfolio</md-button> -->
     <md-button ui-sref="contacts">Contact Me</md-button>
   </div>
 </div>
