--- a/client/app/contacts/contacts.template.html
+++ b/client/app/contacts/contacts.template.html
@@ -1,29 +1,34 @@
-Contacts
+<p class="title">Here you can sand me a message!</p>
 
-<form novalidate class="simple-form" ng-submit="send(user)">
+<form novalidate name="registrationForm" class="simple-form" ng-submit="send(user)">
  <md-content class="mdset md-padding" layout="row" layout-wrap layout-align="center center">
   <div flex="35" class="psetcont" >
-    <md-input-container class="md-icon-float md-block">
+    <md-input-container class="md-icon-float md-block" >
       <!-- Use floating label instead of placeholder -->
-      <label>Company</label>
+      <label>*Company</label>
       <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
-      <input ng-model="user.name" type="text">
-    </md-input-container>
-    <md-input-container  class="md-block">
-      <md-icon md-svg-src="img/icons/ic_phone_24px.svg" class="phone"></md-icon>
-      <input ng-model="user.phone" type="text" placeholder="Phone Number">
-    </md-input-container>
-    <md-input-container class="md-block">
-      <!-- Use floating placeholder instead of label -->
-      <md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon>
-      <input ng-model="user.email" type="email" placeholder="Email">
-    </md-input-container>
-    <md-input-container  class="md-block">
-      <md-icon md-svg-src="img/icons/ic_place_24px.svg" style="display:inline-block;"></md-icon>
-      <input ng-model="user.address" type="text" placeholder="Address" >
+      <input ng-model="user.name" type="text" ng-maxlength="15" ng-minlength="2" required />
     </md-input-container>
 
-      <md-button class="md-raised md-primary">Send</md-button>
+    <md-input-container class="md-icon-float md-block" >
+      <label>*Phone Number</label>
+      <md-icon md-svg-src="img/icons/ic_phone_24px.svg" class="phone"></md-icon>
+      <input ng-model="user.phone" type="text" ng-pattern="/^\(?(\d{3})\)?[ .-]?(\d{3})[ .-]?(\d{4})$/" required />
+    </md-input-container>
+
+    <md-input-container class="md-icon-float md-block" >
+      <label>*Email</label>
+      <md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon>
+      <input ng-model="user.email" type="email" ng-pattern="^[A-Za-z0-9._-]+@[[A-Za-z0-9.-]+$" required />
+    </md-input-container>
+    
+    <md-input-container  class="md-icon-float md-block" >
+       <label>*Message</label>
+      <md-icon md-svg-src="img/icons/ic_message_24px.svg" class="message"></md-icon>
+      <input ng-model="user.message" type="text" ng-maxlength="15" ng-minlength="2" required/>
+    </md-input-container>
+
+      <md-button class="md-raised md-primary" ng-disabled="registrationForm.$invalid">Send</md-button>
   </div>
 
   </md-content>
