--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,10 @@
 
 
 
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
 
     <!-- external libs and framework -->
     <script src="../bower_components/angular/angular.min.js"></script>
