--- a/client/index.html
+++ b/client/index.html
@@ -25,34 +25,30 @@
 
 
 
-    <!-- jQuery -->
+
+
+    <!-- libs and framework -->
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
-
-    <!-- external libs and framework -->
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="../bower_components/angular-material/angular-material.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-
     
 
-
-    <!--internal libs framework -->
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="index.css">
     <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
+
     <script src="/app/app.js"></script>
     <script src="/app/app.routes.js"></script>
     <script src="/app/aboutme/aboutme.controller.js"></script>
-     <script src="/app/contacts/contacts.controller.js"></script>
+    <script src="/app/contacts/contacts.controller.js"></script>
     <script src="/app/aboutme/aboutme.directive.js"></script>
     <script src="general.service.js"></script>
+    
   </body>
 </html> 
