--- a/client/app/aboutme/aboutme.template.html
+++ b/client/app/aboutme/aboutme.template.html
@@ -1,34 +1,29 @@
 
 
-<!--Card -->
 
 <md-content class="mdset md-padding" layout="row" layout-wrap layout-align="top center">
 <!--Fab button -->
-<md-fab-speed-dial md-direction="down" class="md-scale">
-
-  <md-fab-trigger>
-    <md-button aria-label="menu" id="menu" class="md-fab md-primary" ng-click="GeneralSrv.timeFunc(flag)">
-      <md-icon md-svg-src="img/icons/menu.svg"></md-icon>
-    </md-button>
-  </md-fab-trigger>
-
-  <md-fab-actions>       
-
-    <md-button href="https://github.com/xreallyx/myRepo" aria-label="GitHub" class="md-fab md-raised md-mini">
-      <md-icon md-svg-src="img/icons/GitHub_Mark.svg"  aria-label="GitHub"></md-icon>
-    </md-button>  
-
-    <md-button href="https://www.linkedin.com/profile/view?id=ADEAABORa6UB_ML2nY0e0VfDzqUxLaH1Ohfw8Ew&authType=NAME_SEARCH&authToken=D9dY&locale=it_IT&srchid=3282973811448562180442&srchindex=1&srchtotal=58&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3282973811448562180442%2CVSRPtargetId%3A328297381%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" aria-label="Linkedin" class="md-fab md-raised md-mini">
-      <md-icon md-svg-src="img/icons/linkedin.svg" aria-label="Linkedin"></md-icon>
-    </md-button>      
-  </md-fab-actions> 
-</md-fab-speed-dial>
+  <md-fab-speed-dial md-direction="down" class="md-scale">
+    <md-fab-trigger>
+      <md-button aria-label="menu" id="menu" class="md-fab md-primary" ng-click="GeneralSrv.timeFunc()">
+        <md-icon md-svg-src="img/icons/menu.svg"></md-icon>
+      </md-button>
+    </md-fab-trigger>
+    <md-fab-actions>       
+      <md-button href="https://github.com/xreallyx/myRepo" aria-label="GitHub" class="md-fab md-raised md-mini">
+        <md-icon md-svg-src="img/icons/GitHub_Mark.svg"  aria-label="GitHub"></md-icon>
+      </md-button>  
+      <md-button href="https://www.linkedin.com/profile/view?id=ADEAABORa6UB_ML2nY0e0VfDzqUxLaH1Ohfw8Ew&authType=NAME_SEARCH&authToken=D9dY&locale=it_IT&srchid=3282973811448562180442&srchindex=1&srchtotal=58&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3282973811448562180442%2CVSRPtargetId%3A328297381%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH" aria-label="Linkedin" class="md-fab md-raised md-mini">
+        <md-icon md-svg-src="img/icons/linkedin.svg" aria-label="Linkedin"></md-icon>
+      </md-button>      
+    </md-fab-actions> 
+  </md-fab-speed-dial>
 
   <div flex="35" layout="column">
 
     <md-card class="pset md-whiteframe-1dp">
       <img id="photo" ng-src="img/FTesseraBestShp_render.png" class="md-card-image" alt="Washed Out" />
-
+<!--Card -->
       <md-card-title>
       <md-card-title-text>
         <span id="cit" class="md-headline">Web Developer - Full Stack Mean Passionate</span>
@@ -65,7 +60,7 @@
     </div>
   </md-whiteframe>
 
-  <md-toast id="toast" ng-model="flag" ng-init="flag = 0">Thank you for watching!</md-toast>
+  <md-toast id="toast">Thank you for watching!</md-toast>
 
 </md-content>
 
