resolve + onenter running

--- a/client/app/aboutme/aboutme.template.html
+++ b/client/app/aboutme/aboutme.template.html
@@ -1,6 +1,4 @@
 
-
-
 <md-content class="mdset md-padding" layout="row" layout-wrap layout-align="top center">
 <!--Fab button -->
   <md-fab-speed-dial md-direction="down" class="md-scale">
@@ -56,7 +54,7 @@
       Jquery <strong>AngularJs</strong>
       <strong>NodeJs</strong> <strong>MongoDB</strong> MySql
       Bootstrap Git Agile UxDesign 
-      IOS <strong>Android</strong>
+      IOS Android
     </div>
   </md-whiteframe>
 
