--- a/client/app/aboutme/aboutme.template.html
+++ b/client/app/aboutme/aboutme.template.html
@@ -1,5 +1,5 @@
-
-<md-content class="mdset md-padding" layout="row" layout-wrap layout-align="top center">
+<div class="row">
+<md-content class=" mdset md-padding" layout="row" layout-wrap layout-align="top center">
 <!--Fab button -->
   <md-fab-speed-dial md-direction="down" class="md-scale">
     <md-fab-trigger>
@@ -61,7 +61,7 @@
   <md-toast id="toast">Thank you for watching!</md-toast>
 
 </md-content>
-
+</div>
 
 
 
