--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,11 @@
 
 
     <!-- libs and framework -->
-   
+ 
+    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Luckiest+Guy' type='text/css'>
     
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
@@ -33,11 +37,6 @@
     <script src="../bower_components/angular-material/angular-material.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
-    <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
 
     <script src="/app/app.js"></script>
     <script src="/app/app.routes.js"></script>
