--- a/client/app/UI/navbar/navbar.template.html
+++ b/client/app/UI/navbar/navbar.template.html
@@ -1,9 +1,8 @@
 <div class="md-toolbar-tools">
   <div class="menu" layout="row" layout-align="center">
   
-    <md-button ui-sref="aboutme">About Me</md-button>
-<!--    <md-button ui-sref="skills">Portfolio</md-button> -->
-    <md-button ui-sref="contacts">Contact Me</md-button>
+    <md-button ui-sref="home">Home</md-button>
+    <md-button ui-sref="list">List</md-button>
+    
   </div>
 </div>
-
