--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
     <script src="/app/app.routes.js"></script>
     <script src="general.service.js"></script>
     <script src="/app/home/home.controller.js"></script>
+    <script src="/app/list/list.controller.js"></script>
     
   </body>
 </html> 
