--- a/client/app/list/list.template.html
+++ b/client/app/list/list.template.html
@@ -4,7 +4,7 @@
     
         <md-input-container class="md-block">
             <label>Insert weapon's name</label>
-            <input id="vsearch" class="form-control" name="vsearch" type="text" />
+            <input id="vsearch" class="form-control" name="vsearch" type="text"  />
         </md-input-container>
              
         <div layout="row">
@@ -14,9 +14,12 @@
     </md-content>
 </div>
 
-<div layout-padding class="weapon" ng-repeat="weapon in weapons">
-  <h4 ng-bind="weapon.name"></h4>
-  <img style="display:block;max-width:10%;margin:20px auto;" ng-src="{{weapon.image}}" alt="{{weapon.name}}">
-  <p ng-bind="weapon.description"></p>
+<div layout-padding class="oggetto">
+<h4 ng-bind="weapon.name.toUpperCase()"></h4>
+<p ng-bind="weapon.description"></p>
+<img class="oggetto" ng-src="{{weapon.image}}" alt="{{weapon.name}}">
+<p ng-bind="weapon.availability"></p>
 </div> 
+
+
 
