--- a/client/app/UI/navbar/navbar.template.html
+++ b/client/app/UI/navbar/navbar.template.html
@@ -1,8 +1,8 @@
 <div class="md-toolbar-tools">
   <div class="menu" layout="row" layout-align="center">
   
-    <md-button ui-sref="home">Home</md-button>
-    <md-button ui-sref="list">List</md-button>
+    <md-button ui-sref="home">Insert</md-button>
+    <md-button ui-sref="list">Search</md-button>
 
     
   </div>
