--- a/client/app/list/list.template.html
+++ b/client/app/list/list.template.html
@@ -6,7 +6,7 @@
             
                 <md-input-container class="md-block" >
                     <label>Insert weapon's name</label>
-                    <input id="vsearch" class="form-control" name="vsearch" type="text" ng-model="weaponName" ng-pattern="/^[A-Za-z0-9]{2,15}$/" />
+                    <input id="vsearch" class="form-control" name="vsearch" type="text" ng-model="weaponName" ng-pattern="/^[A-Za-z0-9]{2,15}$/" required/>
                 </md-input-container>
                      
                 <div layout="row">
@@ -19,17 +19,18 @@
         </form>
     </div>
 
-<div layout-padding class="md-whiteframe-1dp oggetto" ng-repeat="weapon in weapons">
-<h4 ng-bind="weapon.name.toUpperCase()"></h4>
-<p ng-bind="weapon.description"></p>
-<img class="oggetto" ng-src="{{weapon.image}}" alt="{{weapon.name}}">
-<p ng-bind="weapon.availability"></p>
+<div layout-padding class="md-whiteframe-10dp oggetto" ng-repeat="weapon in weapons">
+<h4 ng-bind="::weapon.name.toUpperCase()"></h4>
+<p ng-bind="::weapon.description"></p>
+<img class="oggetto" ng-src="{{::weapon.image}}" alt="{{::weapon.name}}">
+<p ng-bind="::weapon.availability"></p>
 </div> 
-<div layout-padding class="md-whiteframe-1dp oggetto" ng-init="flag === false" ng-model="flag" ng-show="flag">
+<div layout-padding class="md-whiteframe-10dp oggetto" ng-init="flag === false" ng-model="flag" ng-show="flag">
 <h4 ng-bind="weapon.name.toUpperCase()"></h4>
 <p ng-bind="weapon.description"></p>
 <img class="oggetto" ng-src="{{weapon.image}}" alt="{{weapon.name}}">
 <p ng-bind="weapon.availability"></p>
+<md-button class="md-warn md-raised" ng-click="remove(weaponName)">Delete</md-button>
 </div> 
 
 
