--- a/client/app/home/home.template.html
+++ b/client/app/home/home.template.html
@@ -1,5 +1,5 @@
 
-<p class="title">Insert your weapon!</p>
+<p class="title">Insert your weapon</p>
 
 <div layout="column" ng-cloak>
   <md-content class="md-padding" layout="row" layout-wrap layout-align="center center">
