--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <meta name="application-name" content="Artoo Campus">
     <meta name="viewport" content="width=device-width">
     
+    
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="../index.css">
     <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
@@ -37,6 +38,7 @@
     <script src="../bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="../bower_components/angular-material/angular-material.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../bower_components//jquery/dist/jquery.min.js"></script>
 
     <script src="/app/app.js"></script>
     <script src="/app/app.routes.js"></script>
