--- a/client/app/list/list.template.html
+++ b/client/app/list/list.template.html
@@ -61,7 +61,7 @@
                 <md-tooltip>You have to insert a number!</md-tooltip>
               </md-input-container>
              
-             <md-button class="md-raised md-primary" ng-disabled="inputForm.$invalid" ng-click="update(weapon.name)">Confirm</md-button>
+             <md-button class="md-raised md-primary" ng-disabled="inputForm.$invalid" ng-click="GeneralSrv.save(weapon)">Confirm</md-button>
              <md-button class="md-raised md-secondary" ng-click="close()">Close</md-button>
             </form>
         </div>    
